--- a/size-guide-test.html
+++ b/size-guide-test.html
@@ -189,46 +189,74 @@
                 <div>Hips</div>
               </div>
             </div>
-            <div id="w-node-_5e4eeffe-4a87-b473-a65b-43cf65361141-3faa71ed" class="w-layout-grid grid-size">
+            <div class="w-layout-grid grid-size">
               <div id="w-node-_5e4eeffe-4a87-b473-a65b-43cf65361142-3faa71ed" class="size-block header">
-                <div>xs</div>
+                <div>xxs</div>
               </div>
               <div id="w-node-_5e4eeffe-4a87-b473-a65b-43cf65361145-3faa71ed" class="size-block">
-                <div>31-32&#x27;&#x27;</div>
+                <div>29-30</div>
               </div>
               <div id="w-node-_5e4eeffe-4a87-b473-a65b-43cf65361148-3faa71ed" class="size-block">
-                <div>23-25&#x27;&#x27;</div>
+                <div>23-24</div>
               </div>
               <div id="w-node-_5e4eeffe-4a87-b473-a65b-43cf6536114b-3faa71ed" class="size-block">
-                <div>33-34</div>
+                <div>32-33</div>
               </div>
+            </div>
+            <div id="w-node-_5e4eeffe-4a87-b473-a65b-43cf65361141-3faa71ed" class="w-layout-grid grid-size">
+                <div id="w-node-_5e4eeffe-4a87-b473-a65b-43cf65361142-3faa71ed" class="size-block header">
+                  <div>xs</div>
+                </div>
+                <div id="w-node-_5e4eeffe-4a87-b473-a65b-43cf65361145-3faa71ed" class="size-block">
+                  <div>31-32&#x27;&#x27;</div>
+                </div>
+                <div id="w-node-_5e4eeffe-4a87-b473-a65b-43cf65361148-3faa71ed" class="size-block">
+                  <div>23-25&#x27;&#x27;</div>
+                </div>
+                <div id="w-node-_5e4eeffe-4a87-b473-a65b-43cf6536114b-3faa71ed" class="size-block">
+                  <div>33-34</div>
+                </div>
             </div>
             <div id="w-node-_5e4eeffe-4a87-b473-a65b-43cf6536114e-3faa71ed" class="w-layout-grid grid-size">
               <div id="w-node-_5e4eeffe-4a87-b473-a65b-43cf6536114f-3faa71ed" class="size-block header">
-                <div>s</div>
+                <div>xs</div>
               </div>
               <div id="w-node-_5e4eeffe-4a87-b473-a65b-43cf65361152-3faa71ed" class="size-block">
-                <div>33-34&#x27;&#x27;</div>
+                <div>31-32</div>
               </div>
               <div id="w-node-_5e4eeffe-4a87-b473-a65b-43cf65361155-3faa71ed" class="size-block">
-                <div>26-27&#x27;&#x27;</div>
+                <div>25-26</div>
               </div>
               <div id="w-node-_5e4eeffe-4a87-b473-a65b-43cf65361158-3faa71ed" class="size-block">
-                <div>35-37&#x27;&#x27;</div>
+                <div>34-35</div>
               </div>
+            </div>
+            <div id="w-node-_5e4eeffe-4a87-b473-a65b-43cf6536114e-3faa71ed" class="w-layout-grid grid-size">
+                <div id="w-node-_5e4eeffe-4a87-b473-a65b-43cf6536114f-3faa71ed" class="size-block header">
+                  <div>s</div>
+                </div>
+                <div id="w-node-_5e4eeffe-4a87-b473-a65b-43cf65361152-3faa71ed" class="size-block">
+                  <div>33-34</div>
+                </div>
+                <div id="w-node-_5e4eeffe-4a87-b473-a65b-43cf65361155-3faa71ed" class="size-block">
+                  <div>27-28</div>
+                </div>
+                <div id="w-node-_5e4eeffe-4a87-b473-a65b-43cf65361158-3faa71ed" class="size-block">
+                  <div>36-37</div>
+                </div>
             </div>
             <div id="w-node-_5e4eeffe-4a87-b473-a65b-43cf6536115b-3faa71ed" class="w-layout-grid grid-size">
               <div id="w-node-_5e4eeffe-4a87-b473-a65b-43cf6536115c-3faa71ed" class="size-block header">
                 <div>m</div>
               </div>
               <div id="w-node-_5e4eeffe-4a87-b473-a65b-43cf6536115f-3faa71ed" class="size-block">
-                <div>35-37&#x27;&#x27;</div>
+                <div>35-36</div>
               </div>
               <div id="w-node-_5e4eeffe-4a87-b473-a65b-43cf65361162-3faa71ed" class="size-block">
-                <div>28-31&#x27;&#x27;</div>
+                <div>29-30</div>
               </div>
               <div id="w-node-_5e4eeffe-4a87-b473-a65b-43cf65361165-3faa71ed" class="size-block">
-                <div>37-40&#x27;&#x27;</div>
+                <div>38-39</div>
               </div>
             </div>
             <div id="w-node-_5e4eeffe-4a87-b473-a65b-43cf65361168-3faa71ed" class="w-layout-grid grid-size">
@@ -236,21 +264,55 @@
                 <div>l</div>
               </div>
               <div id="w-node-_5e4eeffe-4a87-b473-a65b-43cf6536116c-3faa71ed" class="size-block">
-                <div>38-39&#x27;&#x27;</div>
+                <div>37-38</div>
               </div>
               <div id="w-node-_5e4eeffe-4a87-b473-a65b-43cf6536116f-3faa71ed" class="size-block">
-                <div>30-33&#x27;&#x27;</div>
+                <div>31-32</div>
               </div>
               <div id="w-node-_5e4eeffe-4a87-b473-a65b-43cf65361172-3faa71ed" class="size-block">
-                <div>40-43&#x27;&#x27;</div>
+                <div>40-41</div>
               </div>
+            </div>
+            <div id="w-node-_5e4eeffe-4a87-b473-a65b-43cf65361168-3faa71ed" class="w-layout-grid grid-size">
+                <div id="w-node-_5e4eeffe-4a87-b473-a65b-43cf65361169-3faa71ed" class="size-block header">
+                  <div>xl</div>
+                </div>
+                <div id="w-node-_5e4eeffe-4a87-b473-a65b-43cf6536116c-3faa71ed" class="size-block">
+                  <div>39-40</div>
+                </div>
+                <div id="w-node-_5e4eeffe-4a87-b473-a65b-43cf6536116f-3faa71ed" class="size-block">
+                  <div>33-34</div>
+                </div>
+                <div id="w-node-_5e4eeffe-4a87-b473-a65b-43cf65361172-3faa71ed" class="size-block">
+                  <div>42-43</div>
+                </div>
+             </div>
+            <div id="w-node-_5e4eeffe-4a87-b473-a65b-43cf65361168-3faa71ed" class="w-layout-grid grid-size">
+                <div id="w-node-_5e4eeffe-4a87-b473-a65b-43cf65361169-3faa71ed" class="size-block header">
+                  <div>xxl</div>
+                </div>
+                <div id="w-node-_5e4eeffe-4a87-b473-a65b-43cf6536116c-3faa71ed" class="size-block">
+                  <div>41-42</div>
+                </div>
+                <div id="w-node-_5e4eeffe-4a87-b473-a65b-43cf6536116f-3faa71ed" class="size-block">
+                  <div>35-36</div>
+                </div>
+                <div id="w-node-_5e4eeffe-4a87-b473-a65b-43cf65361172-3faa71ed" class="size-block">
+                  <div>44-45</div>
+                </div>
             </div>
           </div>
         </div>
         <div class="align-centre">
           <div class="w-layout-grid grid-size-wrap">
             <div id="w-node-_624b85ad-2e02-cee0-0c27-a79b2b80fdde-3faa71ed" class="w-layout-grid grid-size">
-              <div id="w-node-_624b85ad-2e02-cee0-0c27-a79b2b80fddf-3faa71ed" class="size-block">
+                <div id="w-node-_624b85ad-2e02-cee0-0c27-a79b2b80fddf-3faa71ed" class="size-block">
+                    <div>Size</div>
+                </div>
+                <div id="w-node-_624b85ad-2e02-cee0-0c27-a79b2b80fddf-3faa71ed" class="size-block">
+                <div>xxs</div>
+              </div>
+              <div class="size-block">
                 <div>xs</div>
               </div>
               <div id="w-node-_624b85ad-2e02-cee0-0c27-a79b2b80fde2-3faa71ed" class="size-block">
@@ -262,48 +324,142 @@
               <div id="w-node-_624b85ad-2e02-cee0-0c27-a79b2b80fde8-3faa71ed" class="size-block">
                 <div>l</div>
               </div>
+              <div id="w-node-_624b85ad-2e02-cee0-0c27-a79b2b80fddf-3faa71ed" class="size-block">
+                <div>xl</div>
+              </div>
+              <div id="w-node-_624b85ad-2e02-cee0-0c27-a79b2b80fddf-3faa71ed" class="size-block">
+                <div>xxl</div>
+              </div>
             </div>
             <div id="w-node-_624b85ad-2e02-cee0-0c27-a79b2b80fdeb-3faa71ed" class="w-layout-grid grid-size">
+              <div class="size-block">
+                <div>Aus/UK</div>
+              </div>
               <div id="w-node-_624b85ad-2e02-cee0-0c27-a79b2b80fdec-3faa71ed" class="size-block">
-                <div>us 2</div>
+                <div>4</div>
               </div>
               <div id="w-node-_624b85ad-2e02-cee0-0c27-a79b2b80fdef-3faa71ed" class="size-block">
-                <div>us 4</div>
+                <div>6</div>
               </div>
               <div id="w-node-_624b85ad-2e02-cee0-0c27-a79b2b80fdf2-3faa71ed" class="size-block">
-                <div>us 6</div>
+                <div>8</div>
               </div>
               <div id="w-node-_624b85ad-2e02-cee0-0c27-a79b2b80fdf5-3faa71ed" class="size-block">
-                <div>us 8</div>
+                <div>10</div>
+              </div>
+              <div class="size-block">
+                <div>12</div>
+              </div>
+              <div class="size-block">
+                <div>14</div>
+              </div>
+              <div class="size-block">
+                <div>16</div>
               </div>
             </div>
             <div id="w-node-_624b85ad-2e02-cee0-0c27-a79b2b80fdf8-3faa71ed" class="w-layout-grid grid-size">
-              <div id="w-node-_624b85ad-2e02-cee0-0c27-a79b2b80fdf9-3faa71ed" class="size-block">
-                <div>uk 6</div>
+                <div id="w-node-_624b85ad-2e02-cee0-0c27-a79b2b80fdf5-3faa71ed" class="size-block">
+                    <div>usa</div>
+                </div>
+                <div id="w-node-_624b85ad-2e02-cee0-0c27-a79b2b80fdf9-3faa71ed" class="size-block">
+                <div>0</div>
               </div>
               <div id="w-node-_624b85ad-2e02-cee0-0c27-a79b2b80fdfc-3faa71ed" class="size-block">
-                <div>Uk 8</div>
+                <div>2</div>
               </div>
               <div id="w-node-_624b85ad-2e02-cee0-0c27-a79b2b80fdff-3faa71ed" class="size-block">
-                <div>Uk 10</div>
+                <div>4</div>
               </div>
               <div id="w-node-_624b85ad-2e02-cee0-0c27-a79b2b80fe02-3faa71ed" class="size-block">
-                <div>Uk 12</div>
+                <div>6</div>
+              </div>
+              <div class="size-block">
+                <div>8</div>
+              </div>
+              <div class="size-block">
+                <div>10</div>
+              </div>
+              <div class="size-block">
+                <div>12</div>
               </div>
             </div>
             <div id="w-node-_624b85ad-2e02-cee0-0c27-a79b2b80fe05-3faa71ed" class="w-layout-grid grid-size">
               <div id="w-node-_624b85ad-2e02-cee0-0c27-a79b2b80fe06-3faa71ed" class="size-block">
-                <div>EU 34</div>
+                <div>FRA</div>
               </div>
               <div id="w-node-_624b85ad-2e02-cee0-0c27-a79b2b80fe09-3faa71ed" class="size-block">
-                <div>EU 36</div>
+                <div>32</div>
               </div>
               <div id="w-node-_624b85ad-2e02-cee0-0c27-a79b2b80fe0c-3faa71ed" class="size-block">
-                <div>EU 38</div>
+                <div>34</div>
               </div>
               <div id="w-node-_624b85ad-2e02-cee0-0c27-a79b2b80fe0f-3faa71ed" class="size-block">
-                <div>EU 40</div>
+                <div>36</div>
               </div>
+              <div class="size-block">
+                <div>38</div>
+              </div>
+              <div class="size-block">
+                <div>40</div>
+              </div>
+              <div class="size-block">
+                <div>42</div>
+              </div>
+              <div class="size-block">
+                <div>44</div>
+              </div>
+            </div>
+            <div class="w-layout-grid grid-size">
+                <div id="w-node-_624b85ad-2e02-cee0-0c27-a79b2b80fe06-3faa71ed" class="size-block">
+                  <div>FRA</div>
+                </div>
+                <div class="size-block">
+                    <div>30</div>
+                  </div>
+                <div id="w-node-_624b85ad-2e02-cee0-0c27-a79b2b80fe09-3faa71ed" class="size-block">
+                  <div>32</div>
+                </div>
+                <div id="w-node-_624b85ad-2e02-cee0-0c27-a79b2b80fe0c-3faa71ed" class="size-block">
+                  <div>34</div>
+                </div>
+                <div id="w-node-_624b85ad-2e02-cee0-0c27-a79b2b80fe0f-3faa71ed" class="size-block">
+                  <div>36</div>
+                </div>
+                <div class="size-block">
+                  <div>38</div>
+                </div>
+                <div class="size-block">
+                  <div>40</div>
+                </div>
+                <div class="size-block">
+                  <div>42</div>
+                </div>
+            </div>
+            <div class="w-layout-grid grid-size">
+                <div id="w-node-_624b85ad-2e02-cee0-0c27-a79b2b80fe06-3faa71ed" class="size-block">
+                  <div>JPN</div>
+                </div>
+                <div class="size-block">
+                    <div>5</div>
+                  </div>
+                <div id="w-node-_624b85ad-2e02-cee0-0c27-a79b2b80fe09-3faa71ed" class="size-block">
+                  <div>7</div>
+                </div>
+                <div id="w-node-_624b85ad-2e02-cee0-0c27-a79b2b80fe0c-3faa71ed" class="size-block">
+                  <div>9</div>
+                </div>
+                <div id="w-node-_624b85ad-2e02-cee0-0c27-a79b2b80fe0f-3faa71ed" class="size-block">
+                  <div>11</div>
+                </div>
+                <div class="size-block">
+                  <div>12</div>
+                </div>
+                <div class="size-block">
+                  <div>14</div>
+                </div>
+                <div class="size-block">
+                  <div>16</div>
+                </div>
             </div>
           </div>
         </div>
