--- a/size-guide-test.html
+++ b/size-guide-test.html
@@ -173,7 +173,7 @@
             </div>
           </div>
         </div>
-        <div class="align-centre">
+        <div class="align-centre grid-inch">
           <div class="w-layout-grid grid-size-wrap">
             <div id="w-node-_5e4eeffe-4a87-b473-a65b-43cf65361134-3faa71ed" class="w-layout-grid grid-size">
               <div id="w-node-_5e4eeffe-4a87-b473-a65b-43cf65361135-3faa71ed" class="size-block header">
@@ -202,20 +202,6 @@
               <div id="w-node-_5e4eeffe-4a87-b473-a65b-43cf6536114b-3faa71ed" class="size-block">
                 <div>32-33</div>
               </div>
-            </div>
-            <div id="w-node-_5e4eeffe-4a87-b473-a65b-43cf65361141-3faa71ed" class="w-layout-grid grid-size">
-                <div id="w-node-_5e4eeffe-4a87-b473-a65b-43cf65361142-3faa71ed" class="size-block header">
-                  <div>xs</div>
-                </div>
-                <div id="w-node-_5e4eeffe-4a87-b473-a65b-43cf65361145-3faa71ed" class="size-block">
-                  <div>31-32&#x27;&#x27;</div>
-                </div>
-                <div id="w-node-_5e4eeffe-4a87-b473-a65b-43cf65361148-3faa71ed" class="size-block">
-                  <div>23-25&#x27;&#x27;</div>
-                </div>
-                <div id="w-node-_5e4eeffe-4a87-b473-a65b-43cf6536114b-3faa71ed" class="size-block">
-                  <div>33-34</div>
-                </div>
             </div>
             <div id="w-node-_5e4eeffe-4a87-b473-a65b-43cf6536114e-3faa71ed" class="w-layout-grid grid-size">
               <div id="w-node-_5e4eeffe-4a87-b473-a65b-43cf6536114f-3faa71ed" class="size-block header">
@@ -411,7 +397,7 @@
             </div>
             <div class="w-layout-grid grid-size">
                 <div id="w-node-_624b85ad-2e02-cee0-0c27-a79b2b80fe06-3faa71ed" class="size-block">
-                  <div>FRA</div>
+                  <div>Swe</div>
                 </div>
                 <div class="size-block">
                     <div>30</div>
