css and add class

--- a/size-guide-test.html
+++ b/size-guide-test.html
@@ -175,7 +175,7 @@
         </div>
         <div class="align-centre grid-inch">
           <div class="w-layout-grid grid-size-wrap">
-            <div id="w-node-_5e4eeffe-4a87-b473-a65b-43cf65361134-3faa71ed" class="w-layout-grid grid-size">
+            <div id="w-node-_5e4eeffe-4a87-b473-a65b-43cf65361134-3faa71ed" class="w-layout-grid grid-size inch-left-header">
               <div id="w-node-_5e4eeffe-4a87-b473-a65b-43cf65361135-3faa71ed" class="size-block header">
                 <div>inch</div>
               </div>
